swag init all
