# Article/server/server.go
@@ -1,18 +1,17 @@
 package main
 
 import (
-	"fmt"
 	"log"
 	"net/http"
 	"strconv"
 	"time"
 
-	_ "gitlab.com/Udevs/Article/server/docs"
 	"github.com/gin-gonic/gin"
-	"gitlab.com/Udevs/Article/models"
-	"gitlab.com/Udevs/Article/storage"
 	ginSwagger "github.com/swaggo/gin-swagger"
 	"github.com/swaggo/gin-swagger/swaggerFiles"
+	"gitlab.com/Udevs/Article/models"
+	_ "gitlab.com/Udevs/Article/server/docs"
+	"gitlab.com/Udevs/Article/storage"
 )
 
 var articleStorage storage.ArticleStorage
@@ -33,11 +32,35 @@ func main() {
 	router.PUT("articles", updateById)
 	//router.GET("articles/search", getSearch)
 
-	router.GET("/swagger/*any",ginSwagger.WrapHandler(swaggerFiles.Handler))
+	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 	router.Run(":8080")
 }
 
+type DefaultError struct {
+	Message string `json:"message"`
+}
+
+type ErrorResponse struct {
+	Message string `json:"message"`
+	Code int `json:"code"`
+}
+
+type SuccessResponse struct {
+	Message string `json:"message"`
+	Data interface{} `json:"data"`
+}
+
 // Bu funksiya esa create qilish uchun
+// @Router /articles [POST]
+// @Summary Create article
+// @Description API for creating article
+// @Tags article
+// @Accept json
+// @Produce json
+// @Param article body models.ArticleReq true "article"
+// @Success 201 {array} SuccessResponse
+// @Failure 400,404  {object} ErrorResponse
+// @Failure default {object} DefaultError
 func createArticle(c *gin.Context) {
 	var article models.Article
 	t := time.Now()
@@ -59,6 +82,15 @@ func createArticle(c *gin.Context) {
 }
 
 // Funksiya ma'lumotlarni list qilib oladi array ichiga
+// @Router /articles [GET]
+// @Summary Get All
+// @Description API for get all article
+// @Tags article
+// @Accept json
+// @Produce json
+// @Success 201 {array} models.Article
+// @Failure 400,404 {object} DefaultError
+// @Failure 500,503 {object} DefaultError
 func getArticle(c *gin.Context) {
 	resp := articleStorage.GetList()
 	if resp == nil {
@@ -69,6 +101,16 @@ func getArticle(c *gin.Context) {
 }
 
 // Id bo'yicha ma'lumot oluvchi funksiya
+// @Router /articles/{id} [GET]
+// @Summary Get By Id
+// @Description API for get by id article
+// @Tags article
+// @Accept json
+// @Produce json
+// @Param id path string true "id"
+// @Success 200 {object} models.Article
+// @Failure 400,404 {object} ErrorResponse
+// @Failure 500,503 {object} DefaultError
 func getArticleById(c *gin.Context) {
 	id := c.Param("id")
 	id1, _ := strconv.Atoi(id)
@@ -81,34 +123,54 @@ func getArticleById(c *gin.Context) {
 }
 
 // Id bo'yicha ma'lumotni o'chiruvchi funksiya
+// @Router /articles/{id} [DELETE]
+// @Summary Delete By Id
+// @Description API for delete by id article
+// @Tags article
+// @Accept json
+// @Produce json
+// @Param id path string true "id"
+// @Success 200 {string}  SuccessResponse
+// @Failure 400,404 {object} ErrorResponse
+// @Failure 500,503 {object} DefaultError
 func deleteById(c *gin.Context) {
 	id := c.Param("id")
 	id1, _ := strconv.Atoi(id)
 	res := articleStorage.Delete(id1)
 	if res == storage.ErrorNotFound {
-		c.JSON(http.StatusNotFound,"No document")
+		c.JSON(http.StatusNotFound, "No document")
 		return
 	}
 	c.JSON(http.StatusOK, res)
 }
 
 // id bo'yicha berilgan ma'lumotlarni yangilash
+// @Router /articles [PUT]
+// @Summary Update Article
+// @Description API for updating articles
+// @Tags article
+// @Accept json
+// @Produce json
+// @Param article body models.ArticleReq true "article"
+// @Success 200 {string} SuccessResponse
+// @Failure 400,404 {object} DefaultError
+// @Failure 500,503 {object} DefaultError
 func updateById(c *gin.Context) {
 	var update models.Article
 
-	res:= articleStorage.Update(update)
-	if err := c.BindJSON(&res); err != nil {
-		log.Println(err)
-		c.JSON(422, err.Error())
+	s := time.Now()
+	update.CreatedAt = &s
+	res := c.BindJSON(&update)
+	if res != nil {
+		c.JSON(422, res.Error())
 		return
 	}
-	if res == nil {
-		c.JSON(http.StatusNotFound, res.Error())
+	res = articleStorage.Update(update)
+	if res != nil {
+		c.JSON(400, res.Error())
 		return
 	}
-
-	fmt.Println("aaaaaa ", res)
-	c.JSON(http.StatusOK, res)
+	c.JSON(http.StatusOK, "message: Update completed")
 }
 
 // func getSearch(c *gin.Context) {
